force-app/main/default/objects/Approval_Process_Reminder__c/Approval_Process_Reminder__c.object-meta.xml
<CustomObject>
    <label>Approval Process Reminder</label>
    <nameField>
        <label>Approval Process Reminder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Process Remiders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>