force-app/main/default/objects/Approval_Process_Reminder__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Approval_Process_Remiders</relationshipName>
    <type>Lookup</type>
</CustomField>