force-app/main/default/objects/Approval_Process_Reminder__c/fields/Recipient_List__c.field-meta.xml
<CustomField>
    <fullName>Recipient_List__c</fullName>
    <label>Recipient List</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>