force-app/main/default/objects/Approval_Process_Reminder__c/fields/Recurring_Every_H__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Every_H__c</fullName>
    <description>Alert will be send every X hours</description>
    <inlineHelpText>Alert will be send every X hours</inlineHelpText>
    <label>Recurring Every (H)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>