force-app/main/default/objects/Approval_Process_Reminder__c/fields/Related_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Related_Approval_Process__c</fullName>
    <label>Related Approval Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>