force-app/main/default/objects/Approval_Process_Reminder__c/fields/Start_Reminder_After_H__c.field-meta.xml
<CustomField>
    <fullName>Start_Reminder_After_H__c</fullName>
    <description>Start sending alerts after x hours that the approval is pending</description>
    <inlineHelpText>Start sending alerts after x hours that the approval is pending</inlineHelpText>
    <label>Start Reminder After (H)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>