force-app/main/default/objects/Approval_Process_Reminder__c/fields/Stop_Recurrence_After__c.field-meta.xml
<CustomField>
    <fullName>Stop_Recurrence_After__c</fullName>
    <description>Stop the recurrence after x alerts</description>
    <inlineHelpText>Stop the recurrence after x alerts</inlineHelpText>
    <label>Stop Recurrence After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>